--- a/store/blocks/desktop/components/screen/home.jsonc
+++ b/store/blocks/desktop/components/screen/home.jsonc
@@ -1,6 +1,6 @@
 {
-  "store.home": { 
-    "blocks": [
+  "responsive-layout.desktop#home__desktop": {
+    "children": [
       "flex-layout.row#desktop__home--slider-promotion"
     ]
   }
